updated header margins and sidebar position

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,19 +34,19 @@
 					<div class="about">
 
 						<div class="clearfix">
-							<div class="portLnk floats" id="lnkOne">
+							<div class="portLnk" id="lnkOne">
 								<div class="portButton">
 									<a href="https://drive.google.com/drive/folders/15qfSnKcOSU8hnuM1EDndRXuJe1-UBkXv">Pre Work</a>
 								</div>
 							</div>
 
-							<div class="portLnk floats" id="linkTwo">
+							<div class="portLnk" id="linkTwo">
 								<div class="portButton">
 									<a href="https://en.wikipedia.org/wiki/Role-playing_game">RPG Game</a>
 								</div>
 							</div>
 
-							<div class="portLnk floats" id="lnkThree">
+							<div class="portLnk" id="lnkThree">
 								<div class="portButton">
 									<a href="https://en.wikipedia.org/wiki/Trivia">Trivia Game</a>
 								</div>
@@ -54,19 +54,19 @@
 						</div>
 
 						<div class="clearfix">
-							<div class="portLnk floats" id="lnkFour">
+							<div class="portLnk" id="lnkFour">
 								<div class="portButton">
 									<a href="https://www.google.com/search?q=placeholder&rlz=1C1CHBF_enUS767US767&oq=placeholder&aqs=chrome..69i57j69i61j0l4.1538j1j7&sourceid=chrome&ie=UTF-8">Rutgers Info Widget</a>
 								</div>
 							</div>
 
-							<div class="portLnk floats" id="lnkFive">
+							<div class="portLnk" id="lnkFive">
 								<div class="portButton">
 									<a href="https://en.wikipedia.org/wiki/Rock%E2%80%93paper%E2%80%93scissors">Rock Paper Scissors</a>
 								</div>
 							</div>
 
-							<div class="portLnk floats"  id="lnkSix">
+							<div class="portLnk"  id="lnkSix">
 								<div class="portButton">
 									<a href="https://www.google.com/search?q=placeholder&rlz=1C1CHBF_enUS767US767&oq=placeholder&aqs=chrome..69i57j69i61j0l4.1538j1j7&sourceid=chrome&ie=UTF-8">Hangman</a>
 								</div>
