added fixed navbar and static navbar to 640px

--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 	<body>
 
-		<header class="clearfix">
+		<header class="clearfix navbar">
 			<div class="clearfix content">
 
 				<h1>Jorge A. Paredes</h1>
