--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 	<body>
 
-		<header class="clearfix">
+		<header class="clearfix navbar">
 			<div class="clearfix content">
 				
 				<h1>Jorge A. Paredes</h1>
