--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 
 	<body>
 
-		<header class="clearfix">
+		<header class="clearfix navbar">
 			<div class="clearfix content">
 				
 				<h1>Jorge A. Paredes</h1>
@@ -27,7 +27,7 @@
 		</header>
 
 		<main>
-			<div class="clearfix content">
+			<div class="clearfix content myBody">
 				
 				<section class="mainContent">
 					<h2>Portfolio</h2>
